# rosbag_lib_noros

./: CMakeLists.txt  README.md
include/ros/: datatypes.h  serialized_message.h
include/rosbag/: chunked_file.h  stream.h
install/aarch64/include/ros/: time.h
install/aarch64/include/rosbag/: bag.h
install/x86/include/ros/: datatypes.h  debug.h  platform.h
install/x86/include/rosbag/: bag.h  chunked_file.h  stream.h
my_rosbag_test/: CMakeLists.txt
my_rosbag_test/src/: test.cpp
src/cpp_common/: header.cpp
src/rosbag_storage/: bag.cpp  no_encryptor.ccpp  stream.cpp
